Fixed gallery image cropping

--- a/themes/FoundationPress/src/assets/scss/templates/_gallery.scss
+++ b/themes/FoundationPress/src/assets/scss/templates/_gallery.scss
@@ -120,12 +120,19 @@
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-
-                img {
-                    height: 9.5rem;
-                    width: 9.5rem;
-                    margin: 0.2rem;
+                .gallery-image {
+                    position: relative;
+                    overflow: hidden;
+                    height: 15vw;
+                    width: 15vw;
+                    margin: 0.5rem;
+                    img {
+                        position: absolute;
+                        width: 150%;
+                        max-width: none;
+                    }
                 }
+                
             }
         }
     }
